--- a/index.html
+++ b/index.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quran Player</title>
-
-    <link rel="shortcut icon" href="#" type="image/x-icon">
-
-    <!-- font awesome kit -->
-    <script src="https://kit.fontawesome.com/1694914d74.js" crossorigin="anonymous"></script>
-
-    <!-- css file -->
-    <link rel="stylesheet" href="/style/style.css">
+    <title>القرآن الكريم</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <!-- <div>
-        <h2 class="title">Quran Player</h2>
-    </div> -->
-    <div class="container">
-        <div class="player">
-            <div class="title" id="title">Bismillahir Rohmanir Roheem</div>
-            <audio src="" class="quranPlayer" controls autoplay></audio>
-            <div class="buttons">
-                <div class="icon previous"><i class="fa-solid fa-backward"></i></div>
-                <!-- <div class="icon play"><i class="fa-solid fa-play"></i></div> -->
-                <div class="icon next"><i class="fa-solid fa-forward"></i></div>
-            </div>
-        </div>
-
-        <div class="surahs">
-
-        </div>
-    </div>
-
-    <!-- JS file -->
-    <script src="/js/main.js"></script>
+    <header>
+        <h1>القرآن الكريم</h1>
+        <nav>
+            <button onclick="toggleTheme()">تبديل الوضع</button>
+        </nav>
+    </header>
+    <main>
+        <section id="surah-list">
+            <h2>السور</h2>
+            <ul id="surahs"></ul>
+        </section>
+        <section id="ayah-display">
+            <h2>عرض الآيات</h2>
+            <div id="ayahs"></div>
+        </section>
+        <section id="audio-player">
+            <h2>تلاوة صوتية</h2>
+            <audio id="audio" controls></audio>
+        </section>
+    </main>
+    <script src="main.js"></script>
 </body>
-
 </html>
